# quantum-route-optimizer

./: .env.example  .gitignore  APP_FLOW.md  BACKEND_STRUCTURE.md  EXPERIENCE_ENGINE.md  FRONTEND_GUIDELINES.md  PRD.md  README.md  TECH_STACK.md  package.json  turbo.json
.github/workflows/: ci.yml
apps/web/dashboard/: analytics.html  drivers.html  fleet.html  index.html  login.html  optimizer.html  settings.html  tracking.html
apps/web/dashboard/css/: analytics.css  animations.css  auth.css  base.css  components.css  drivers.css  fleet.css  layout.css  optimizer.css  settings.css  tokens.css  tracking.css
apps/web/dashboard/js/: analytics.js  api.js  app.js  auth.js  drivers.js  fleet.js  map.js  optimizer.js  settings.js  sidebar.js  stats.js  store.js  tracking.js
infrastructure/: docker-compose.dev.yml
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/app/: config.py  dependencies.py  main.py  schemas.py
services/api/app/api/: health.py
services/api/app/api/v1/: auth.py  drivers.py  optimize.py  routes.py  vehicles.py
services/api/app/infrastructure/: __init__.py  database.py  models.py
services/api/migrations/: env.py
services/api/migrations/versions/: 001_initial_schema.py  README.md
services/routing-engine/: pyproject.toml
services/routing-engine/engine/: __init__.py  base_solver.py  classical_solver.py  distance.py  models.py  selector.py
