[project]
name = "omniroute-routing-engine"
version = "0.1.0"
description = "OmniRoute AI — Route Optimization Engine (OR-Tools + Quantum-Ready)"
requires-python = ">=3.13"
dependencies = [
    "ortools>=9.11.4210",
    "pydantic>=2.10.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
